@@ -89,49 +89,3 @@ def ChangeSetCommand(cfg, troveSpecs, outFileName, recurse = True,
     client.createChangeSetFile(outFileName, primaryCsList, recurse = recurse, 
                                callback = callback, 
                                excludeList = cfg.excludeTroves)
-
-def LocalChangeSetCommand(db, cfg, item, outFileName):
-    client = conaryclient.ConaryClient(cfg)
-
-    name, ver, flv = cmdline.parseTroveSpec(item)
-    troveList = client.db.findTrove(None, (name, ver, flv))
-    troveList = client.db.getTroves(troveList)
-
-    list = []
-    for outerTrove in troveList:
-	for trove in db.walkTroveSet(outerTrove):
-	    ver = trove.getVersion()
-	    origTrove = db.getTrove(trove.getName(), ver, trove.getFlavor(), 
-                                    pristine = True)
-	    ver = ver.createShadow(versions.LocalLabel())
-            list.append((trove, origTrove, ver, update.UpdateFlags()))
-
-    incomplete = [ db.troveIsIncomplete(x[1].getName(), x[1].getVersion(), 
-                                        x[1].getFlavor()) for x in list ]
-    incomplete = [ x[0][1] for x in itertools.izip(list, incomplete) if x[1] ]
-    if incomplete:
-        raise errors.ConaryError('''\
-Cannot create a local changeset using an incomplete troves:  Please ensure 
-you have the latest conary and then reinstall these troves:
-     %s
-'''   % '\n    '.join('%s=%s[%s]' % (x.getName(),x.getVersion(),x.getFlavor()) for x in incomplete))
-
-    result = update.buildLocalChanges(db, list, root = cfg.root,
-                                      updateContainers = True)
-    if not result: return
-    cs = result[0]
-
-    for outerTrove in troveList:
-	cs.addPrimaryTrove(outerTrove.getName(), 
-                           outerTrove.getVersion().createShadow(
-                                                        versions.LocalLabel()),
-                           outerTrove.getFlavor())
-
-    for (changed, fsTrove) in result[1]:
-	if changed:
-	    break
-
-    if not changed:
-	log.error("there have been no local changes")
-    else:
-	cs.writeToFile(outFileName)
