@@ -883,6 +883,7 @@ class FilesystemJob:
 	@type flags: UpdateFlags
 	"""
 
+        import epdb;epdb.st('f')
 	if baseTrove:
             assert(troveCs.getOldVersion() == baseTrove.getVersion() or
                    troveCs.getOldVersion().parentVersion() ==
